// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Brackets Bracket 1`] = `
Array [
  0.7,
  0,
  0.182,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Brackets Bracket 2`] = `
Array [
  0.2121,
  0,
  0.07,
  0,
  0.2121,
  -0.0756,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Brackets Bracket 3`] = `
Array [
  0.2121,
  0,
  0.28,
  0,
  0.2121,
  -0.0756,
  0,
  0,
  1,
]
`;
